# uvgV3CRTP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ProjectDetails.cmake  Versioning.cmake  uvgv3crtp.pc.in  uvgv3crtpConfig.cmake  v3crtplib.pc.in  v3crtplibConfig.cmake  version.cpp.in
dependencies/: FindDependencies.cmake
examples/: CMakeLists.txt  README.md  advanced_receiver_example.cpp  advanced_sender_example.cpp  gof_receiver_example.cpp  gof_sender_example.cpp  sdp_receiver_example.cpp  sdp_sender_example.cpp  simple_example.cpp  simple_receiver_example.cpp  simple_sender_example.cpp  unit_receiver_example.cpp  unit_sender_example.cpp
include/uvgv3crtp/: global.h  v3c_api.h  version.h
include/v3crtplib/: global.h  v3c_api.h  version.h
src/: Nalu.cpp  Nalu.h  Sample_Stream.cpp  Sample_Stream.h  Timestamp.cpp  Timestamp.h  V3C.cpp  V3C.h  V3C_Gof.cpp  V3C_Gof.h  V3C_Receiver.cpp  V3C_Receiver.h  V3C_Sender.cpp  V3C_Sender.h  V3C_Unit.cpp  V3C_Unit.h  global.h  v3c_api.cpp
