project(examples)

add_executable(simple_sender_example)
add_executable(simple_receiver_example)
add_executable(advanced_sender_example)
add_executable(advanced_receiver_example)

# Sources
target_sources(simple_sender_example PRIVATE simple_sender_example.cpp)
target_sources(simple_receiver_example PRIVATE simple_receiver_example.cpp)
target_sources(advanced_sender_example PRIVATE advanced_sender_example.cpp)
target_sources(advanced_receiver_example PRIVATE advanced_receiver_example.cpp)

target_link_libraries(simple_sender_example PRIVATE v3crtplib)
target_link_libraries(simple_receiver_example PRIVATE v3crtplib)
target_link_libraries(advanced_sender_example PRIVATE v3crtplib)
target_link_libraries(advanced_receiver_example PRIVATE v3crtplib)