project(examples)

add_executable(simple_sender_example)
add_executable(simple_receiver_example)
add_executable(gof_sender_example)
add_executable(gof_receiver_example)
add_executable(unit_sender_example)
add_executable(unit_receiver_example)
add_executable(sdp_sender_example)
add_executable(sdp_receiver_example)

# Sources
target_sources(simple_sender_example PRIVATE simple_sender_example.cpp)
target_sources(simple_receiver_example PRIVATE simple_receiver_example.cpp)
target_sources(gof_sender_example PRIVATE gof_sender_example.cpp)
target_sources(gof_receiver_example PRIVATE gof_receiver_example.cpp)
target_sources(unit_sender_example PRIVATE unit_sender_example.cpp)
target_sources(unit_receiver_example PRIVATE unit_receiver_example.cpp)
target_sources(sdp_sender_example PRIVATE sdp_sender_example.cpp)
target_sources(sdp_receiver_example PRIVATE sdp_receiver_example.cpp)


target_link_libraries(simple_sender_example PRIVATE uvgv3crtp)
target_link_libraries(simple_receiver_example PRIVATE uvgv3crtp)
target_link_libraries(gof_sender_example PRIVATE uvgv3crtp)
target_link_libraries(gof_receiver_example PRIVATE uvgv3crtp)
target_link_libraries(unit_sender_example PRIVATE uvgv3crtp)
target_link_libraries(unit_receiver_example PRIVATE uvgv3crtp)
target_link_libraries(sdp_sender_example PRIVATE uvgv3crtp)
target_link_libraries(sdp_receiver_example PRIVATE uvgv3crtp)
